remember last viewed profile option